objects/Booking_Audit__c.object
<CustomObject>
    <fields>
        <fullName>BCT_NetAmount__c</fullName>
        <label>BCT NetAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Net_Amount__c</fullName>
        <label>Opportunity Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Net_Amount__c</fullName>
        <label>Opportunity Product Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Booking Audits</relationshipLabel>
        <relationshipName>Booking_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Net_Amount__c</fullName>
        <label>Quote Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Split_Net_Amount__c</fullName>
        <label>Split Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <label>Booking Audit</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Booking Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>